--- a/DSA - 1.ipynb
+++ b/DSA - 1.ipynb
@@ -8,6 +8,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Pattern 1 "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 25,
    "metadata": {},
@@ -40,6 +47,13 @@
     "    for j in range(0,num):\n",
     "        print(\"*\",end='\\t')\n",
     "    print('\\n')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Pattern 2"
    ]
   },
   {
@@ -79,8 +93,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Pattern 4"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -110,6 +131,13 @@
     "#     for j in range(0,num):\n",
     "#         print(\"*\"*i,end='\\t')\n",
     "    print('\\n')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Pattern 3"
    ]
   },
   {
@@ -143,6 +171,251 @@
     "    for j in range(1,i+1):\n",
     "        print(j,end='\\t')\n",
     "    print('\\n')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Pattern 5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the input:\n",
+      "5\n",
+      "*****\t\n",
+      "\n",
+      "****\t\n",
+      "\n",
+      "***\t\n",
+      "\n",
+      "**\t\n",
+      "\n",
+      "*\t\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Enter the input:\")\n",
+    "num = int(input())\n",
+    "for i in range(num,0,-1):\n",
+    "    print(\"*\"*i,end='\\t')\n",
+    "#     for j in range(0,num):\n",
+    "#         print(\"*\"*i,end='\\t')\n",
+    "    print('\\n')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Pattern 6 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the input:\n",
+      "5\n",
+      "5\t4\t3\t2\t1\t\n",
+      "\n",
+      "4\t3\t2\t1\t\n",
+      "\n",
+      "3\t2\t1\t\n",
+      "\n",
+      "2\t1\t\n",
+      "\n",
+      "1\t\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Enter the input:\")\n",
+    "num = int(input())\n",
+    "for i in range(num,0,-1):\n",
+    "    for j in range(i,0,-1):\n",
+    "        print(j,end='\\t')\n",
+    "    print('\\n')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Pattern 7 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the input:\n",
+      "5\n",
+      "     *      \n",
+      "    ***     \n",
+      "   *****    \n",
+      "  *******   \n",
+      " *********  \n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Enter the input:\")\n",
+    "num = int(input())\n",
+    "for i in range(0,num):\n",
+    "#     print(\" \"*num,\"*\",\" \"*num)\n",
+    "    for j in range(0,1):\n",
+    "#         x= num - i - 1\n",
+    "#         y = (i * 2) + 1\n",
+    "        print(\" \"*(int(num)-i-1), \"*\"*(i*2+1), \" \"*(int(num)-i-1),end=' ')\n",
+    "    print()\n",
+    "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the input:\n",
+      "5\n",
+      "    * \n",
+      "   * * \n",
+      "  * * * \n",
+      " * * * * \n",
+      "* * * * * \n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Enter the input:\")\n",
+    "num = int(input())\n",
+    "for i in range(0,num):\n",
+    "#     print(\" \"*num,\"*\",\" \"*num)\n",
+    "    for j in range(0,num-i-1):\n",
+    "        print(end=\" \")\n",
+    "    for j in range(0,i+1):\n",
+    "        print(\"*\",end=' ')\n",
+    "    print()\n",
+    "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Pattern 8 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the input:\n",
+      "5\n",
+      " *********  \n",
+      "  *******   \n",
+      "   *****    \n",
+      "    ***     \n",
+      "     *      \n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Enter the input:\")\n",
+    "num = int(input())\n",
+    "for i in range(num-1,-1,-1):\n",
+    "#     print(\" \"*num,\"*\",\" \"*num)\n",
+    "    for j in range(0,1):\n",
+    "#         x= num - i - 1\n",
+    "#         y = (i * 2) + 1\n",
+    "        print(\" \"*(int(num)-i-1), \"*\"*(i*2+1), \" \"*(int(num)-i-1),end=' ')\n",
+    "    print()\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Pattern 9"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the input:\n",
+      "5\n",
+      "    * \n",
+      "   * * \n",
+      "  * * * \n",
+      " * * * * \n",
+      "* * * * * \n",
+      " ********* \n",
+      "  *******  \n",
+      "   *****   \n",
+      "    ***    \n",
+      "     *     \n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Enter the input:\")\n",
+    "num = int(input())\n",
+    "for i in range(0,num):\n",
+    "#     print(\" \"*num,\"*\",\" \"*num)\n",
+    "    for j in range(0,num-i-1):\n",
+    "        print(end=\" \")\n",
+    "    for j in range(0,i+1):\n",
+    "        print(\"*\",end=' ')\n",
+    "    print()\n",
+    "    \n",
+    "for i in range(num-1,-1,-1):\n",
+    "#     print(\" \"*num,\"*\",\" \"*num)\n",
+    "    for j in range(0,1):\n",
+    "#         x= num - i - 1\n",
+    "#         y = (i * 2) + 1\n",
+    "        print(\" \"*(int(num)-i-1), \"*\"*(i*2+1), \" \"*(int(num)-i-1),end=' ')\n",
+    "    print()\n",
+    "    "
    ]
   },
   {
