--- a/DSA - 1.ipynb
+++ b/DSA - 1.ipynb
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [
     {
@@ -111,26 +111,22 @@
       "Enter the input:\n",
       "5\n",
       "\t\n",
-      "\n",
       "1\t\n",
-      "\n",
       "22\t\n",
-      "\n",
       "333\t\n",
-      "\n",
       "4444\t\n",
-      "\n"
+      "55555\t\n"
      ]
     }
    ],
    "source": [
     "print(\"Enter the input:\")\n",
     "num = int(input())\n",
-    "for i in range(0,num):\n",
+    "for i in range(0,num+1):\n",
     "    print(f\"{i}\"*i,end='\\t')\n",
     "#     for j in range(0,num):\n",
     "#         print(\"*\"*i,end='\\t')\n",
-    "    print('\\n')"
+    "    print()"
    ]
   },
   {
@@ -142,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [
     {
@@ -151,16 +147,11 @@
      "text": [
       "Enter the input:\n",
       "5\n",
-      "1\t\n",
-      "\n",
-      "1\t2\t\n",
-      "\n",
-      "1\t2\t3\t\n",
-      "\n",
-      "1\t2\t3\t4\t\n",
-      "\n",
-      "1\t2\t3\t4\t5\t\n",
-      "\n"
+      "1\n",
+      "12\n",
+      "123\n",
+      "1234\n",
+      "12345\n"
      ]
     }
    ],
@@ -169,8 +160,8 @@
     "num = int(input())\n",
     "for i in range(1,num+1):\n",
     "    for j in range(1,i+1):\n",
-    "        print(j,end='\\t')\n",
-    "    print('\\n')"
+    "        print(j,end='')\n",
+    "    print()"
    ]
   },
   {
@@ -182,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [
     {
@@ -191,16 +182,11 @@
      "text": [
       "Enter the input:\n",
       "5\n",
-      "*****\t\n",
-      "\n",
-      "****\t\n",
-      "\n",
-      "***\t\n",
-      "\n",
-      "**\t\n",
-      "\n",
-      "*\t\n",
-      "\n"
+      "*****\n",
+      "****\n",
+      "***\n",
+      "**\n",
+      "*\n"
      ]
     }
    ],
@@ -208,10 +194,10 @@
     "print(\"Enter the input:\")\n",
     "num = int(input())\n",
     "for i in range(num,0,-1):\n",
-    "    print(\"*\"*i,end='\\t')\n",
+    "    print(\"*\"*i,end='')\n",
     "#     for j in range(0,num):\n",
     "#         print(\"*\"*i,end='\\t')\n",
-    "    print('\\n')"
+    "    print()"
    ]
   },
   {
@@ -223,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [
     {
@@ -232,16 +218,11 @@
      "text": [
       "Enter the input:\n",
       "5\n",
-      "5\t4\t3\t2\t1\t\n",
-      "\n",
-      "4\t3\t2\t1\t\n",
-      "\n",
-      "3\t2\t1\t\n",
-      "\n",
-      "2\t1\t\n",
-      "\n",
-      "1\t\n",
-      "\n"
+      "54321\n",
+      "4321\n",
+      "321\n",
+      "21\n",
+      "1\n"
      ]
     }
    ],
@@ -250,8 +231,8 @@
     "num = int(input())\n",
     "for i in range(num,0,-1):\n",
     "    for j in range(i,0,-1):\n",
-    "        print(j,end='\\t')\n",
-    "    print('\\n')"
+    "        print(j,end='')\n",
+    "    print()"
    ]
   },
   {
@@ -375,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [
     {
@@ -384,16 +365,16 @@
      "text": [
       "Enter the input:\n",
       "5\n",
-      "    * \n",
-      "   * * \n",
-      "  * * * \n",
-      " * * * * \n",
-      "* * * * * \n",
-      " ********* \n",
-      "  *******  \n",
-      "   *****   \n",
-      "    ***    \n",
-      "     *     \n"
+      "     *      \n",
+      "    ***     \n",
+      "   *****    \n",
+      "  *******   \n",
+      " *********  \n",
+      " *********  \n",
+      "  *******   \n",
+      "   *****    \n",
+      "    ***     \n",
+      "     *      \n"
      ]
     }
    ],
@@ -402,10 +383,10 @@
     "num = int(input())\n",
     "for i in range(0,num):\n",
     "#     print(\" \"*num,\"*\",\" \"*num)\n",
-    "    for j in range(0,num-i-1):\n",
-    "        print(end=\" \")\n",
-    "    for j in range(0,i+1):\n",
-    "        print(\"*\",end=' ')\n",
+    "    for j in range(0,1):\n",
+    "#         x= num - i - 1\n",
+    "#         y = (i * 2) + 1\n",
+    "        print(\" \"*(int(num)-i-1), \"*\"*(i*2+1), \" \"*(int(num)-i-1),end=' ')\n",
     "    print()\n",
     "    \n",
     "for i in range(num-1,-1,-1):\n",
@@ -417,6 +398,466 @@
     "    print()\n",
     "    "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Pattern 10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the input:\n",
+      "5\n",
+      "     *      \n",
+      "     **     \n",
+      "     ***    \n",
+      "     ****   \n",
+      "     *****  \n",
+      "     *****  \n",
+      "     ****   \n",
+      "     ***    \n",
+      "     **     \n",
+      "     *      \n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Enter the input:\")\n",
+    "num = int(input())\n",
+    "for i in range(0,num):\n",
+    "#     print(\" \"*num,\"*\",\" \"*num)\n",
+    "    for j in range(0,1):\n",
+    "#         x= num - i - 1\n",
+    "#         y = (i * 2) + 1\n",
+    "        print(\" \"*(int(num)-1), \"*\"*(i+1), \" \"*(int(num)-i-1),end=' ')\n",
+    "    print()\n",
+    "    \n",
+    "## Lower pyramid half\n",
+    "for i in range(num-1,-1,-1):\n",
+    "#     print(\" \"*num,\"*\",\" \"*num)\n",
+    "    for j in range(0,1):\n",
+    "#         x= num - i - 1\n",
+    "#         y = (i * 2) + 1\n",
+    "        print(\" \"*(int(num)-1), \"*\"*(i+1), \" \"*(int(num)-i-1),end=' ')\n",
+    "    print()\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Pattern 11"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 144,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the input:\n",
+      "5\n",
+      "1\n",
+      "01\n",
+      "101\n",
+      "0101\n",
+      "10101\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Enter the input:\")\n",
+    "num = int(input())\n",
+    "for i in range(0,num):\n",
+    "    for j in range(0,i+1):\n",
+    "        if i%2==0:\n",
+    "            if j%2==0:\n",
+    "                print(\"1\",end='')\n",
+    "            else:\n",
+    "                print(\"0\",end='')\n",
+    "        else:\n",
+    "            if j%2==0:\n",
+    "                print(\"0\",end='')\n",
+    "            else:\n",
+    "                print(\"1\",end='')\n",
+    "            \n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 159,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the input:\n",
+      "5\n",
+      "1\n",
+      "01\n",
+      "101\n",
+      "0101\n",
+      "10101\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Enter the input:\")\n",
+    "num = int(input())\n",
+    "start = 1\n",
+    "for i in range(0,num):\n",
+    "\n",
+    "    if i %2==0:\n",
+    "        start = 1\n",
+    "    else:\n",
+    "        start = 0\n",
+    "\n",
+    "    for j in range(0,i+1):\n",
+    "        \n",
+    "        print(start,end='')\n",
+    "        start = 1 - start\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Pattern 12"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 172,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the input:\n",
+      "4\n",
+      "1\n",
+      "12\n",
+      "123\n",
+      "1234\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Enter the input:\")\n",
+    "num = int(input())\n",
+    "for i in range(1,num+1):\n",
+    "    for j in range(1,i+1):\n",
+    "        print(j,end='')\n",
+    "\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 198,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the input:\n",
+      "5\n",
+      "1        1\n",
+      "12      21\n",
+      "123    321\n",
+      "1234  4321\n",
+      "1234554321\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Enter the input:\")\n",
+    "num = int(input())\n",
+    "space = 2 * (num-1)\n",
+    "for i in range(1,num+1):\n",
+    "    #numbers\n",
+    "    for j in range(1,i+1):\n",
+    "        print(j,end='')\n",
+    "    #spaces\n",
+    "    for j in range(0,1):        \n",
+    "        print(\" \"*(int(space)) ,end='')\n",
+    "    #numbers\n",
+    "    for j in range(i,0,-1):\n",
+    "        print(j,end='')\n",
+    "    print()\n",
+    "    space = space -2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Pattern 13"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 217,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the input:\n",
+      "5\n",
+      "\n",
+      "1 \n",
+      "2 3 \n",
+      "4 5 6 \n",
+      "7 8 9 10 \n",
+      "11 12 13 14 15 \n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Enter the input:\")\n",
+    "num = int(input())\n",
+    "start = 1\n",
+    "for i in range(0,num+1):\n",
+    "    for j in range(1,i+1):\n",
+    "        print(start,end=' ')\n",
+    "        start += 1\n",
+    "\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## NOTES"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 228,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "66\n",
+      "A\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(ord('B'))\n",
+    "print(chr(65))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Pattern 14"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 223,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the input:\n",
+      "5\n",
+      "A\n",
+      "AB\n",
+      "ABC\n",
+      "ABCD\n",
+      "ABCDE\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Enter the input:\")\n",
+    "num = int(input())\n",
+    "for i in range(1,num+1):\n",
+    "    for j in range(1,i+1):\n",
+    "        print(chr(64+j),end='')\n",
+    "\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Pattern 15"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 240,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the input:\n",
+      "5\n",
+      "EDCBA\n",
+      "DCBA\n",
+      "CBA\n",
+      "BA\n",
+      "A\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Enter the input:\")\n",
+    "num = int(input())\n",
+    "for i in range(num,-1,-1):\n",
+    "    for j in range(i,0,-1):\n",
+    "        print(chr(64+j),end='')\n",
+    "\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Pattern 16"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 241,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the input:\n",
+      "5\n",
+      "\n",
+      "A\n",
+      "BB\n",
+      "CCC\n",
+      "DDDD\n",
+      "EEEEE\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Enter the input:\")\n",
+    "num = int(input())\n",
+    "for i in range(0,num+1):\n",
+    "    print(chr(64+i)*i,end='')\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Pattern 17"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 244,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the input:\n",
+      "5\n",
+      "     @      \n",
+      "    AAA     \n",
+      "   BBBBB    \n",
+      "  CCCCCCC   \n",
+      " DDDDDDDDD  \n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Enter the input:\")\n",
+    "num = int(input())\n",
+    "for i in range(0,num):\n",
+    "    #spaces\n",
+    "    for j in range()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 246,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1024"
+      ]
+     },
+     "execution_count": 246,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
