--- a/DSA - 1.ipynb
+++ b/DSA - 1.ipynb
@@ -680,7 +680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 304,
    "metadata": {},
    "outputs": [
     {
@@ -810,33 +810,375 @@
     "num = int(input())\n",
     "for i in range(0,num):\n",
     "    #spaces\n",
-    "    for j in range()\n"
+    "    for j in range():\n",
+    "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": 269,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "1024"
-      ]
-     },
-     "execution_count": 246,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the input:\n",
+      "4\n",
+      "   A   \n",
+      "  ABC  \n",
+      " ABCDE \n",
+      "ABCDEFG\n"
+     ]
     }
    ],
-   "source": []
+   "source": [
+    "print(\"Enter the input:\")\n",
+    "num = int(input())\n",
+    "start = 1\n",
+    "\n",
+    "for i in range(0,num):\n",
+    "    alpha = 0\n",
+    "    #spaces\n",
+    "    for j in range(0,num-i-1):\n",
+    "        print(end=\" \")\n",
+    "    #Alphabets\n",
+    "    for j in range(0,start):\n",
+    "        print(chr(65+alpha),end='')\n",
+    "        alpha = alpha + 1 \n",
+    "   \n",
+    "    #spaces\n",
+    "    for j in range(0,num-i-1):\n",
+    "        print(end=\" \")\n",
+    "    print()\n",
+    "    start = start + 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 302,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the input:\n",
+      "4\n",
+      "   A   \n",
+      "  ABA  \n",
+      " ABCBA \n",
+      "ABCDCBA\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Enter the input:\")\n",
+    "num = int(input())\n",
+    "start = 1\n",
+    "\n",
+    "for i in range(0,num):\n",
+    "    alpha = 0\n",
+    "#     print(start,\"=======\")\n",
+    "    #spaces\n",
+    "    for j in range(0,num-i-1):\n",
+    "        print(end=\" \")\n",
+    "    #Alphabets\n",
+    "    for j in range(0,start):\n",
+    "        \n",
+    "#         print()\n",
+    "#         print(i,alpha,\"--------\")\n",
+    "        if j < int((start/2)+1):\n",
+    "            alpha += 1\n",
+    "        else:\n",
+    "            alpha -= 1\n",
+    "        print(chr(64+alpha),end='')\n",
+    "    #spaces\n",
+    "    for j in range(0,num-i-1):\n",
+    "        print(end=\" \")\n",
+    "    print()\n",
+    "    start = start + 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Pattern 18"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 324,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the input:\n",
+      "5\n",
+      "E\n",
+      "ED\n",
+      "EDC\n",
+      "EDCB\n",
+      "EDCBA\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Enter the input:\")\n",
+    "num = int(input())\n",
+    "for i in range(1,num+1):\n",
+    "    for j in range(1,i+1):\n",
+    "        print(chr(64+(num-j+1)),end='')\n",
+    "\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Pattern 19"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 336,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the input:\n",
+      "5\n",
+      "**********\n",
+      "****  ****\n",
+      "***    ***\n",
+      "**      **\n",
+      "*        *\n",
+      "          \n",
+      "*        *\n",
+      "**      **\n",
+      "***    ***\n",
+      "****  ****\n",
+      "**********\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Enter the input:\")\n",
+    "num = int(input())\n",
+    "star = 0\n",
+    "for i in range(num,0,-1):\n",
+    "    # For star\n",
+    "    for j in range(i,0,-1):\n",
+    "        print(\"*\",end='')\n",
+    "    # For spaces\n",
+    "    for j in range(0,1):\n",
+    "        print(\" \"*(star),end='')\n",
+    "    # For star\n",
+    "    for j in range(i,0,-1):\n",
+    "        print(\"*\",end='')\n",
+    "    print()\n",
+    "    star += 2\n",
+    "st = star\n",
+    "for i in range(0,num+1):\n",
+    "    # For star\n",
+    "    for j in range(0,i):\n",
+    "        print(\"*\",end='')\n",
+    "    # For spaces\n",
+    "    for j in range(0,1):\n",
+    "        print(\" \"*(st),end='')\n",
+    "    # For star\n",
+    "    for j in range(0,i):\n",
+    "        print(\"*\",end='')\n",
+    "    print()\n",
+    "    st -= 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Pattern 20"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 348,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the input:\n",
+      "5\n",
+      "*        *\n",
+      "**      **\n",
+      "***    ***\n",
+      "****  ****\n",
+      "**********\n",
+      "****  ****\n",
+      "***    ***\n",
+      "**      **\n",
+      "*        *\n",
+      "          \n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Enter the input:\")\n",
+    "num = int(input())\n",
+    "star = 8\n",
+    "for i in range(0,num):\n",
+    "    # For star\n",
+    "    for j in range(0,i+1):\n",
+    "        print(\"*\",end='')\n",
+    "    # For spaces\n",
+    "    for j in range(0,1):\n",
+    "        print(\" \"*(star),end='')\n",
+    "    # For star\n",
+    "    for j in range(0,i+1):\n",
+    "        print(\"*\",end='')\n",
+    "    print()\n",
+    "    star -= 2\n",
+    "st = 2\n",
+    "\n",
+    "for i in range(0,num):\n",
+    "    # For star\n",
+    "    for j in range(1,num-i):\n",
+    "        print(\"*\",end='')\n",
+    "    # For spaces\n",
+    "    for j in range(0,1):\n",
+    "        print(\" \"*(st),end='')\n",
+    "    # For star\n",
+    "    for j in range(1,num-i):\n",
+    "        print(\"*\",end='')\n",
+    "    print()\n",
+    "    st += 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Pattern 21"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 382,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the number:\n",
+      "5\n",
+      "*****\n",
+      "*   *\n",
+      "*   *\n",
+      "*   *\n",
+      "*****\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Enter the number:\")\n",
+    "num = int(input())\n",
+    "space = 0\n",
+    "for i in range(0,num):\n",
+    "   #for square\n",
+    "    for j in range(0,num):\n",
+    "        if i == 0 or j == 0 or i == num-1 or j == num-1:\n",
+    "            print(\"*\",end='')\n",
+    "        else:\n",
+    "            print(\" \",end='')\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Pattern 22"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 395,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the number:\n",
+      "4\n",
+      "4444444\n",
+      "4333334\n",
+      "4322234\n",
+      "4321234\n",
+      "4322234\n",
+      "4333334\n",
+      "4444444\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Enter the number:\")\n",
+    "num = int(input())\n",
+    "for i in range(0,2*num-1):\n",
+    "    val = num\n",
+    "    for j in range(0,2*num-1):\n",
+    "        top = i\n",
+    "        left = j\n",
+    "        bottom = (2*num - 2 ) - i\n",
+    "        right = (2*num - 2 ) - j\n",
+    "        print(num - min(top,bottom ,left,right),end='')\n",
+    "        \n",
+    "    print()"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "0 4444444\n",
+    "1 4333334\n",
+    "2 4322234\n",
+    "3 4321234\n",
+    "4 4322234\n",
+    "5 4333334\n",
+    "6 4444444"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 388,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 388,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "min(1,2,3)"
+   ]
   },
   {
    "cell_type": "code",
