--- a/02_DSA_Basic_Math.ipynb
+++ b/02_DSA_Basic_Math.ipynb
@@ -746,8 +746,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Hashing for the count of frequencies of numbers"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -755,8 +762,8 @@
      "output_type": "stream",
      "text": [
       "Enter the input\n",
-      "9\n",
-      "1\n"
+      "5\n",
+      "2\n"
      ]
     }
    ],
@@ -772,7 +779,97 @@
     "        if i == j:\n",
     "            cnt += 1\n",
     "    freq[i] = cnt\n",
-    "print(freq[num])"
+    "if num in freq:\n",
+    "    print(freq[num])\n",
+    "else:\n",
+    "    print(\"number does not exists\")\n",
+    "# Time complexity O(n) \n",
+    "# Space complexity O(n) -- becuase we are creating a dictionary"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Character hashing using list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the input\n",
+      "g\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Enter the input\")\n",
+    "st = input()\n",
+    "given_string = 'abcdgunasbchjdsw'\n",
+    "hash_list = [0] * 26\n",
+    "# count = 0\n",
+    "for char in given_string:        \n",
+    "    hash_list[ord(char)-97] += 1\n",
+    "\n",
+    "print(hash_list[ord(st)-97])\n",
+    "\n",
+    "# Time complexity O(n) \n",
+    "# Space complexity O(1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### High and low frequency"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the max or min\n",
+      "mn\n",
+      "Maximum repeated value: {9, 7}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Enter the max or min\")\n",
+    "ip = input()\n",
+    "lst = [1,2,3,4,5,1,2,5,7,9,3,4,1,3]\n",
+    "freq = dict.fromkeys(lst, 0)\n",
+    "cnt = 0\n",
+    "for i in freq.keys():\n",
+    "    cnt = 0\n",
+    "    for j in lst:\n",
+    "        if i == j:\n",
+    "            cnt += 1\n",
+    "    freq[i] = cnt\n",
+    "    \n",
+    "if num in freq:\n",
+    "    if ip == 'mx':\n",
+    "        ip = max(list(freq.values()))\n",
+    "        value = {i for i in freq if freq[i]==ip}\n",
+    "        print(\"Maximum repeated value:\",value)\n",
+    "    else:\n",
+    "        ip = min(list(freq.values()))\n",
+    "        value = {i for i in freq if freq[i]==ip}\n",
+    "        print(\"Maximum repeated value:\",value)\n",
+    "else:\n",
+    "    print(\"number does not exists\")"
    ]
   },
   {
@@ -788,6 +885,22 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
