--- a/04_DSA_Arrays_Hard.ipynb
+++ b/04_DSA_Arrays_Hard.ipynb
@@ -218,10 +218,193 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 3) 3-Sum : Find triplets that add up to a zero\n",
+    "### 3) 3-Sum : Find triplets that add up to a zero\n",
     "\n",
-    "Problem Statement: Given an array of N integers, your task is to find unique triplets that add up to give a sum of zero. In short, you need to return an array of all the unique triplets [arr[a], arr[b], arr[c]] such that i!=j, j!=k, k!=i, and their sum is equal to zero."
+    "**Problem Statement:** Given an array of N integers, your task is to find unique triplets that add up to give a sum of zero. In short, you need to return an array of all the unique triplets [arr[a], arr[b], arr[c]] such that i!=j, j!=k, k!=i, and their sum is equal to zero."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Example 1: \n",
+    "\n",
+    "Input: nums = [-1,0,1,2,-1,-4]\n",
+    "\n",
+    "Output: [[-1,-1,2],[-1,0,1]]\n",
+    "\n",
+    "Explanation: Out of all possible unique triplets possible, [-1,-1,2] and [-1,0,1] satisfy the condition of summing up to zero with i!=j!=k\n",
+    "\n",
+    "Example 2:\n",
+    "\n",
+    "Input: nums=[-1,0,1,0]\n",
+    "Output: Output: [[-1,0,1],[-1,1,0]]\n",
+    "Explanation: Out of all possible unique triplets possible, [-1,0,1] and [-1,1,0] satisfy the condition of summing up to zero with i!=j!=k"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{(-1, -1, 2), (-1, 0, 1)}\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr = [-1,0,1,2,-1,-4]\n",
+    "set_dt = set()\n",
+    "for i in range(len(arr)):\n",
+    "    for j in range(i+1,len(arr)):\n",
+    "        for k in range(j+1,len(arr)):\n",
+    "            if arr[i]+arr[j]+arr[k] == 0:\n",
+    "                temp = [arr[i],arr[j],arr[k]] # list because we have to sort it next\n",
+    "                temp.sort() #sorting because there should not be no repeated sets if we don't sort (-1,1,0) and (1,0,-1) are coming which is same\n",
+    "                set_dt.add(tuple(temp)) # Tuple can't be modified and set where duplicates are not allowed\n",
+    "                #print(arr[i],arr[j],arr[k], end=\" \")\n",
+    "        #print(\"\\n\")\n",
+    "print(set_dt)\n",
+    "# time complexity O(n^3)\n",
+    "# Space complexity O(N)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 4) 4-Sum : Find Quads that add up to a zero\n",
+    "\n",
+    "**Problem Statement:** Given an array of N integers, your task is to find unique quads that add up to give a target value. In short, you need to return an array of all the unique quadruplets [arr[a], arr[b], arr[c], arr[d]] such that their sum is equal to a given target."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 5)Length of the longest subarray with zero Sum\n",
+    "\n",
+    "**Problem Statement:** Given an array containing both positive and negative integers, we have to find the length of the longest subarray with the sum of all elements equal to zero."
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "Example 1:\n",
+    "Input Format: N = 6, array[] = {9, -3, 3, -1, 6, -5}\n",
+    "Result: 5\n",
+    "Explanation: The following subarrays sum to zero:\n",
+    "{-3, 3} , {-1, 6, -5}, {-3, 3, -1, 6, -5}\n",
+    "Since we require the length of the longest subarray, our answer is 5!\n",
+    "\n",
+    "Example 2:\n",
+    "Input Format: N = 8, array[] = {6, -2, 2, -8, 1, 7, 4, -10}\n",
+    "Result: 8\n",
+    "Subarrays with sum 0 : {-2, 2}, {-8, 1, 7}, {-2, 2, -8, 1, 7}, {6, -2, 2, -8, 1, 7, 4, -10}\n",
+    "Length of longest subarray = 8"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Brute force approach\n",
+    "arr = [9, -3, 3, -1, 6, -5]\n",
+    "maxi = 0\n",
+    "\n",
+    "for i in range(len(arr)):\n",
+    "    tot = 0\n",
+    "    for j in range(i,len(arr)):\n",
+    "        tot = tot + arr[j]\n",
+    "        if tot == 0:\n",
+    "            maxi = max(maxi,(j-i+1))\n",
+    "\n",
+    "print(maxi)\n",
+    "\n",
+    "# Time complexity O(n^2) # can we do it under 1 iteration?\n",
+    "# Space complexity O(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Optimal soultion\n",
+    "arr = [6, -2, 2, -8, 1, 7, 4, -10]\n",
+    "maxi = 0\n",
+    "ddic = {}\n",
+    "tot = 0\n",
+    "for i in range(len(arr)):\n",
+    "    tot += arr[i]\n",
+    "    if tot == 0:\n",
+    "        maxi = i + 1\n",
+    "    else:\n",
+    "        \n",
+    "        if tot not in ddic:\n",
+    "            ddic[tot] = i\n",
+    "        else:\n",
+    "            maxi = max(maxi,(i-ddic[tot]))\n",
+    "print(maxi)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
